Rebuilt JAR and updated GUI phase